--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -854,10 +854,14 @@ make sure this only happens on large viewports / desktop-ish devices.
   min-width: 100%;
 }
 
+.post-full-content h1:target,
 .post-full-content h2:target,
-.post-full-content h3:target {
+.post-full-content h3:target,
+.post-full-content h4:target,
+.post-full-content h5:target,
+.post-full-content h6:target {
   scroll-margin-top: calc(
-    var(--header-height) + 44px + 0.5em
+    var(--header-height) + 44px + 0.75em
   ); /* 44px height of the banner */
 }
 
