--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -51,13 +51,13 @@
     <meta property="og:image" content="{{ tag.feature_image if tag.feature_image else site.cover_image }}">
     <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
 
-    {# Twitter Card #}
+    {# X / Twitter Card #}
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ title }}">
     <meta name="twitter:description" content="{% t 'meta-tags:description' %}">
     <meta name="twitter:url" content="{{ tag.path | htmlBaseUrl(site.url) }}">
     <meta name="twitter:image" content="{{ tag.feature_image if tag.feature_image else site.cover_image }}">
-    <meta name="twitter:site" content="{{ site.twitter }}">
+    <meta name="twitter:site" content="{{ site.twitterHandle }}">
 
     <meta property="og:image:width" content="{{ tag.image_dimensions.feature_image.width if tag.feature_image else site.image_dimensions.cover_image.width }}">
     <meta property="og:image:height" content="{{ tag.image_dimensions.feature_image.height if tag.feature_image else site.image_dimensions.cover_image.height }}">
