feat: use x logo on author pages

--- a/src/_includes/partials/author-info.njk
+++ b/src/_includes/partials/author-info.njk
@@ -61,7 +61,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
             >
-                {% include "partials/icons/twitter.njk" %}
+                {% include "partials/icons/x.njk" %}
             </a>
         {% endif %}
         {% if author.facebook %}
