--- a/src/_includes/layouts/author.njk
+++ b/src/_includes/layouts/author.njk
@@ -45,9 +45,9 @@
     <meta name="twitter:description" content="{{ author.bio if author.bio else defaultDescription }}">
     <meta name="twitter:url" content="{{ author.path | htmlBaseUrl(site.url) }}">
     <meta name="twitter:image" content="{{ author.cover_image if author.cover_image else site.cover_image }}">
-    <meta name="twitter:site" content="{{ site.twitterHandle }}">
-    {% if author.twitterHandle %}
-        <meta name="twitter:creator" content="{{ author.twitterHandle }}">
+    <meta name="twitter:site" content="{{ site.twitter_handle }}">
+    {% if author.twitter_handle %}
+        <meta name="twitter:creator" content="{{ author.twitter_handle }}">
     {% endif %}
 
     <meta property="og:image:width" content="{{ author.image_dimensions.cover_image.width if author.image_dimensions.cover_image else site.image_dimensions.cover_image.width }}">
