--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -113,7 +113,7 @@
             <meta name="twitter:description" content="{% t 'meta-tags:description' %}">
             <meta name="twitter:url" content="{{ page.url | htmlBaseUrl(site.url) }}">
             <meta name="twitter:image" content="{{ site.cover_image }}">
-            <meta name="twitter:site" content="{{ site.twitterHandle }}">
+            <meta name="twitter:site" content="{{ site.twitter_handle }}">
 
             <meta property="og:image:width" content="{{ site.image_dimensions.cover_image.width }}">
             <meta property="og:image:height" content="{{ site.image_dimensions.cover_image.height }}">
