--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -57,7 +57,7 @@
     <meta name="twitter:description" content="{% t 'meta-tags:description' %}">
     <meta name="twitter:url" content="{{ tag.path | htmlBaseUrl(site.url) }}">
     <meta name="twitter:image" content="{{ tag.feature_image if tag.feature_image else site.cover_image }}">
-    <meta name="twitter:site" content="{{ site.twitterHandle }}">
+    <meta name="twitter:site" content="{{ site.twitter_handle }}">
 
     <meta property="og:image:width" content="{{ tag.image_dimensions.feature_image.width if tag.feature_image else site.image_dimensions.cover_image.width }}">
     <meta property="og:image:height" content="{{ tag.image_dimensions.feature_image.height if tag.feature_image else site.image_dimensions.cover_image.height }}">
