--- a/src/search-results.njk
+++ b/src/search-results.njk
@@ -46,7 +46,7 @@ permalink: '/search/'
     <meta name="twitter:description" content="{% t 'meta-tags:description' %}">
     <meta name="twitter:url" content="{{ permalink | htmlBaseUrl(site.url) }}">
     <meta name="twitter:image" content="{{ site.cover_image }}">
-    <meta name="twitter:site" content="{{ site.twitterHandle }}">
+    <meta name="twitter:site" content="{{ site.twitter_handle }}">
 
     <meta property="og:image:width" content="{{ site.image_dimensions.cover_image.width }}">
     <meta property="og:image:height" content="{{ site.image_dimensions.cover_image.height }}">
