--- a/src/search-results.njk
+++ b/src/search-results.njk
@@ -40,13 +40,13 @@ permalink: '/search/'
     <meta property="og:image" content="{{ site.cover_image }}">
     <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
 
-    {# Twitter Card #}
+    {# X / Twitter Card #}
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ site.title }}">
     <meta name="twitter:description" content="{% t 'meta-tags:description' %}">
     <meta name="twitter:url" content="{{ permalink | htmlBaseUrl(site.url) }}">
     <meta name="twitter:image" content="{{ site.cover_image }}">
-    <meta name="twitter:site" content="{{ site.twitter }}">
+    <meta name="twitter:site" content="{{ site.twitter_handle }}">
 
     <meta property="og:image:width" content="{{ site.image_dimensions.cover_image.width }}">
     <meta property="og:image:height" content="{{ site.image_dimensions.cover_image.height }}">
