--- a/src/_includes/layouts/feed.njk
+++ b/src/_includes/layouts/feed.njk
@@ -2,8 +2,9 @@
 <rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/"
     xmlns:atom="http://www.w3.org/2005/Atom" xmlns:media="http://search.yahoo.com/mrss/" version="2.0">
     <channel>
+        {% set metaTitle %}{% t 'meta-tags:title' %}{% endset %}
         <title>
-            <![CDATA[ {{ "freeCodeCamp.org" if feed.path === "/" else (feed.name | safe + " - freeCodeCamp.org") }} ]]>
+            <![CDATA[ {{ (metaTitle | safe) if feed.path === "/" else (feed.name | safe + " - freeCodeCamp.org") }} ]]>
         </title>
         <description>
             <![CDATA[ {% t 'meta-tags:description' %} ]]>
@@ -11,8 +12,9 @@
         <link>{{ site.url }}</link>
         <image>
             <url>https://cdn.freecodecamp.org/universal/favicons/favicon.png</url>
-            {% set metaTitle %}{% t 'meta-tags:title' %}{% endset %}
-            <title>{{ (metaTitle | escape) if feed.path === "/" else (feed.name | safe + " - freeCodeCamp.org") }}</title>
+            <title>
+                <![CDATA[ {{ (metaTitle | safe) if feed.path === "/" else (feed.name | safe + " - freeCodeCamp.org") }} ]]>
+            </title>
             <link>{{ site.url }}</link>
         </image>
         <generator>Eleventy</generator>
