--- a/src/_includes/assets/css/global.css
+++ b/src/_includes/assets/css/global.css
@@ -16,6 +16,13 @@
   --gray00: #fff;
   --header-height: 38px;
   --blue-dark: #002ead;
+  /* Font */
+  --font-family-sans-serif: 'Lato', sans-serif;
+}
+
+/* Japanese Font */
+:root:lang(ja) {
+  --font-family-sans-serif: 'Lato', 'Noto Sans JP', sans-serif;
 }
 
 /* Fonts
@@ -136,7 +143,7 @@ img {
 }
 html {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: var(--font-family-sans-serif);
 
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -288,7 +295,7 @@ html {
 body {
   overflow-x: hidden;
   color: var(--gray90);
-  font-family: 'Lato', sans-serif;
+  font-family: var(--font-family-sans-serif);
   font-size: 1.5rem;
   line-height: 1.6em;
   font-weight: 400;
