--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -105,7 +105,7 @@ body {
   color: #fff;
   width: 100%;
   background: var(--theme-color);
-  font-family: 'Lato', sans-serif;
+  font-family: var(--font-family-sans-serif);
   font-display: swap;
 }
 
@@ -176,7 +176,7 @@ body {
   align-items: flex-start;
   /* overflow-y: auto; */
   font-size: 1.2em;
-  font-family: Lato, sans-serif;
+  font-family: var(--font-family-sans-serif);
   font-display: swap;
   height: var(--header-height);
   background: var(--theme-color);
@@ -498,7 +498,7 @@ a.nav-forum {
 }
 
 .post-card-excerpt {
-  font-family: 'Lato', sans-serif;
+  font-family: var(--font-family-sans-serif);
   font-display: swap;
 }
 
@@ -798,16 +798,11 @@ make sure this only happens on large viewports / desktop-ish devices.
   margin: 0 auto;
   padding: 70px 150px 0;
   min-height: 230px;
-  font-family: 'Lato', sans-serif;
+  font-family: var(--font-family-sans-serif);
   font-display: swap;
   font-size: 2.2rem;
   line-height: 1.6em;
   background: #fff;
-}
-
-/* Japanese font */
-.post-full-content:lang(ja) {
-  font-family: 'Lato', 'Noto Sans JP', sans-serif;
 }
 
 @media (max-width: 500px) {
@@ -1869,7 +1864,7 @@ p:has(mjx-container.MathJax) {
   justify-content: center;
   align-items: center;
   margin: 0 0 10px;
-  font-family: 'Lato', sans-serif;
+  font-family: var(--font-family-sans-serif);
   font-display: swap;
   font-style: italic;
 }
