--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2337,9 +2337,18 @@ a.banner:hover span {
 
 .banner-ad-top .ad-text {
   display: none;
-  margin-bottom: 10px;
-  color: var(--gray75);
-  font-size: 0.9em;
+}
+
+.banner-ad-bottom {
+  visibility: hidden;
+  padding: 10px 0px;
+  text-align: center;
+}
+
+.side-bar-ad-slot {
+  height: 600px;
+  width: 300px;
+  display: block;
 }
 
 /* 15. Ads
@@ -2347,17 +2356,23 @@ a.banner:hover span {
 
 .ad-wrapper {
   text-align: center;
-  min-height: 280px;
+  height: auto;
 }
 
 .ad-wrapper.banner {
   min-width: 100%;
 }
 
-.ad-wrapper .ad-text {
-  color: var(--gray75);
+.ad-text {
   font-size: 1.4rem;
-  margin-bottom: 10px;
+  color: var(--gray75);
+  text-align: center;
+  line-height: normal;
+}
+
+.sidebar .ad-wrapper .ad-text {
+  margin: 0px;
+  visibility: hidden;
 }
 
 /* Adjust image and video widths when ads are enabled */
@@ -2390,9 +2405,11 @@ a.banner:hover span {
 
   .ad-layout .sidebar {
     display: flex;
-    max-width: 300px;
+    width: 300px;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    padding: 0 10px 10px;
   }
 }
 
