--- a/src/_includes/partials/gam-lazy-loader.njk
+++ b/src/_includes/partials/gam-lazy-loader.njk
@@ -2,8 +2,6 @@
 document.addEventListener('DOMContentLoaded', function() {
     var sidebar = document.querySelector('.sidebar');
     var isSideBarDisplayed = window.getComputedStyle(sidebar).display !== 'none';
-    var topBannerAd = document.querySelector('.banner-ad-top');
-    var isScreenLarge = window.innerWidth > 900;
     function prepareAdSlot(elementId) {
         // Get the element by ID
         const targetElement = document.getElementById(elementId);
@@ -20,7 +18,7 @@ document.addEventListener('DOMContentLoaded', function() {
         if (parentElement) {
             console.log(elementId)
 
-            if(elementId === 'banner-ad-top' || elementId === 'gam-ad-bottom' ) {
+            if (elementId === 'gam-ad-bottom' ) {
                 parentElement.style.backgroundColor = '#eeeef0';
                 if(getComputedStyle(parentElement).visibility === 'hidden') {
                     parentElement.style.visibility = 'inherit'; 
@@ -33,7 +31,7 @@ document.addEventListener('DOMContentLoaded', function() {
             for (let i = 0; i < siblingElements.length; i++) {
                 const sibling = siblingElements[i];
 
-                // Skip the banner-ad-top element itself
+                // Skip the element itself
                 if (sibling === targetElement) continue;
 
                 // Log the sibling or perform any other action
@@ -88,25 +86,6 @@ document.addEventListener('DOMContentLoaded', function() {
                 sidebar.appendChild(containerElement);
                 googletag.defineSlot('/23075930536/post-side', [[292, 30], [240, 400], [300, 75], [216, 54], [250, 360], [300, 50], 'fluid', [300, 31], [120, 20], [300, 250], [120, 30], [180, 150], [200, 446], [168, 42], [200, 200], [160, 600], [120, 90], [125, 125], [240, 133], [120, 60], [1, 1], [120, 240], [220, 90], [216, 36], [250, 250], [168, 28], [234, 60], [120, 600], [300, 600], [88, 31], [300, 100]], sideAdElementId).addService(googletag.pubads());
             }
-        }
-
-        if(isScreenLarge){
-            // Show the container
-            topBannerAd.style.display = 'flex'; 
-
-            // Define the ad slot with size mapping
-            googletag.cmd.push(function() {
-                var mapping = googletag.sizeMapping()
-                    .addSize([1024, 768], [[970, 90], [728, 90]]) // Large screens: 970x90 or 728x90
-                    .addSize([768, 0], [[468, 60]])               // Medium screens: 468x60
-                    .addSize([0, 0], [[320, 50]])                 // Small screens: 320x50
-                    .build();
-
-                // Define the ad slot
-                googletag.defineSlot('/23075930536/post-top', [[970, 90], [728, 90], [468, 60], [320, 50]], 'banner-ad-top')
-                    .defineSizeMapping(mapping) // Apply size mapping to this slot
-                    .addService(googletag.pubads());
-            });
         }
 
         // Define bottom ad
