fix: improve handling for X / Twitter and Facebook usernames and link building, adjust templates

--- a/src/_includes/layouts/author.njk
+++ b/src/_includes/layouts/author.njk
@@ -35,8 +35,8 @@
     <meta property="og:url" content="{{ author.path | htmlBaseUrl(site.url) }}">
     <meta property="og:image" content="{{ author.cover_image if author.cover_image else site.cover_image }}">
     <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
-    {% if author.facebook %}
-        <meta property="article:author" content="{{ author.facebook }}">
+    {% if author.facebook_username %}
+        <meta property="article:author" content="{{ author.facebook_username }}">
     {% endif %}
 
     {# X / Twitter Card #}
