--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -157,8 +157,8 @@ time #}
         <meta property="article:tag" content="{{ tag.name }}">
     {% endfor %}
     <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
-    {% if post.primary_author.facebook %}
-        <meta property="article:author" content="{{ post.primary_author.facebook }}">
+    {% if post.primary_author.facebook_username %}
+        <meta property="article:author" content="{{ post.primary_author.facebook_username }}">
     {% endif %}
 
     {# X / Twitter Card #}
