--- a/src/_includes/partials/author-info.njk
+++ b/src/_includes/partials/author-info.njk
@@ -69,7 +69,7 @@
         {% if author.facebook %}
             <a
                 class="social-link social-link-fb"
-                href="https://facebook.com/{{ author.facebook }}"
+                href="{{ author.facebook }}"
                 target="_blank"
                 rel="noopener noreferrer"
                 data-test-label="facebook-link"
