--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -104,7 +104,7 @@
             <meta property="og:description" content="{% t 'meta-tags:description' %}">
             <meta property="og:url" content="{{ page.url | htmlBaseUrl(site.url) }}">
             <meta property="og:image" content="{{ site.cover_image }}">
-            <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
+            <meta property="article:publisher" content="{{ site.facebook }}">
 
             {# X / Twitter Card #}
             <meta name="twitter:card" content="summary_large_image">
