--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -49,7 +49,7 @@
     <meta property="og:description" content="{% t 'meta-tags:description' %}">
     <meta property="og:url" content="{{ tag.path | htmlBaseUrl(site.url) }}">
     <meta property="og:image" content="{{ tag.feature_image if tag.feature_image else site.cover_image }}">
-    <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
+    <meta property="article:publisher" content="{{ site.facebook }}">
 
     {# X / Twitter Card #}
     <meta name="twitter:card" content="summary_large_image">
