--- a/src/search-results.njk
+++ b/src/search-results.njk
@@ -38,7 +38,7 @@ permalink: '/search/'
     <meta property="og:description" content="{% t 'meta-tags:description' %}">
     <meta property="og:url" content="{{ permalink | htmlBaseUrl(site.url) }}">
     <meta property="og:image" content="{{ site.cover_image }}">
-    <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
+    <meta property="article:publisher" content="{{ site.facebook }}">
 
     {# X / Twitter Card #}
     <meta name="twitter:card" content="summary_large_image">
