--- a/src/_includes/partials/icons/facebook.njk
+++ b/src/_includes/partials/icons/facebook.njk
@@ -1,16 +1,3 @@
-<!-- Facebook Filled icon by Icons8 -->
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-    preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="32" height="32" data-test-label="facebook-icon">
-    <defs>
-        <path
-            d="M640 321.89C640 482.61 523.62 615.43 369.16 638.11C368.42 630.47 367.98 556.08 367.83 414.93C395.49 414.61 420.42 414.27 442.61 413.9C446.4 380.3 452.55 347.37 456.62 323.22C425.51 322.93 388.88 323.31 367.83 323.22C368.37 281.18 368.35 303.77 367.83 262.54C372.62 222.64 384.99 209.96 459.86 213.65C459.57 203.36 460.61 151.4 459.86 133.3C460.87 134.09 279.13 86.74 269.33 241.43C268.52 265.86 268.65 290.49 269.33 323.22C265.63 322.84 238.44 322.84 187.75 323.22L187.75 414.93L269.33 414.93C270.65 564.06 270.21 638.45 268 638.11C114.78 614.35 0 481.73 0 321.89C0 145.28 143.39 1.89 320 1.89C496.61 1.89 640 145.28 640 321.89Z"
-            id="bS1mFenfS"></path>
-    </defs>
-    <g>
-        <g>
-            <g>
-                <use xlink:href="#bS1mFenfS"></use>
-            </g>
-        </g>
-    </g>
+<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" data-test-label="facebook-icon">
+    <path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path>
 </svg>
