fix: set max-width for hn-tables div

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -1185,6 +1185,11 @@ Usage (In Ghost editor):
   border: var(--gray10) 1px solid;
 }
 
+/* Hashnode tables */
+.post-full-content .hn-table {
+  max-width: 100%;
+}
+
 .gist {
   width: 100%;
 }
