feat: add powered by

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -268,6 +268,9 @@
             <a href="https://www.freecodecamp.org/news/copyright-policy/" rel="noopener noreferrer" target="_blank" data-test-label="copyright">
                 {% t 'footer.links.copyright' %}
             </a>
+            <a href="https://hashnode.com/" rel="noopener noreferrer" target="_blank" data-test-label="powered-by">
+                {% t 'footer.links.powered-by' %}
+            </a>
         </div>
     </div>
 </footer>
